objects/Training_Agreement_Settings__c.object
<CustomObject><fields>
        <fullName>Account_Academy_Login_Url_to_MATLAB_Acad__c</fullName>
        <description>stores the Account/Academy Login Url</description>
        <label>Account/Academy Login Url to MATLAB Acad</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Auto_Create_Class_Association__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box value decides whether we have to create Training_Agreement_Class_Relationship__c records or not</description>
        <label>Auto Create Class Association</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Certification_Agreement_Link__c</fullName>
        <label>Certification Agreement Link</label>
        <length>150</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Character_Set__c</fullName>
        <description>Set of characters to be used (semicolon delimited) to generate the Enrollment Code for Enterprise Training Agreement.</description>
        <inlineHelpText>Set of characters to be used (semicolon delimited) to generate the Enrollment Code for Enterprise Training Agreement.</inlineHelpText>
        <label>Character Set</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Class_Prevent_Defaults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for data migration to prevent setting defaults on the class from sponsor office and course language.
If the value is checked, then the defaults will not be set.</description>
        <label>Class Prevent Defaults</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Code_Length__c</fullName>
        <description>The desired length of the Enrollment Code. Defaults to 12. Advised to keep this greater than 8 to avoid collisions.</description>
        <inlineHelpText>The desired length of the Enrollment Code. Defaults to 12. Advised to keep this greater than 8 to avoid collisions.</inlineHelpText>
        <label>Code Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Default_Language_ID__c</fullName>
        <inlineHelpText>18 character Salesforce ID of the Language record from the Language__c object to use for the default value on Training Agreements if one is not provided</inlineHelpText>
        <label>Default Language ID</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Default_Sponsor_Office_ID__c</fullName>
        <inlineHelpText>18 character Salesforce ID of the Sponsor Office record from the Sponsor_Office__c object to use for the default value if none is provided</inlineHelpText>
        <label>Default Sponsor Office ID</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Email_Template_Subject__c</fullName>
        <description>store the email template subject name</description>
        <label>Email Template Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FAQ_Page_Url__c</fullName>
        <label>FAQ Page Url</label>
        <type>Url</type>
    </fields><fields>
        <fullName>MAOTS_Integration__c</fullName>
        <description>End point MAOTS Url to pass new/updated ETA to MAOTS</description>
        <inlineHelpText>MAOTS End point URL</inlineHelpText>
        <label>MAOTS Integration</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Mw_Local_Training_Url_to_Default_Traini__c</fullName>
        <description>This stores the Mw Local Trainig Url</description>
        <label>Mw Local Training Url to  Default Traini</label>
        <type>Url</type>
    </fields><fields>
        <fullName>OrgWideEmailAddress__c</fullName>
        <label>OrgWideEmailAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Self_Enrollment_Authenticated_URL__c</fullName>
        <description>Base URL (including param names) of the Authenticated page used to validate Enrollment Codes and present the list of classes for enrollment.</description>
        <inlineHelpText>Base URL (including param names) of the Authenticated page used to validate Enrollment Codes and present the list of classes for enrollment.</inlineHelpText>
        <label>Self Enrollment Authenticated URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Self_Enrollment_Unauthenticated_URL__c</fullName>
        <description>Base URL (including param names) of the Unauthenticated Force.com Site used to validate Enrollment Codes.</description>
        <inlineHelpText>Base URL (including param names) of the Unauthenticated Force.com Site used to validate Enrollment Codes.</inlineHelpText>
        <label>Self Enrollment Unauthenticated URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value decide the email notification</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Task_Owner__c</fullName>
        <description>after sending the message task should be created and task owner is the stored value in this field</description>
        <label>Task Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Training_Coordinator_Email_Template_Name__c</fullName>
        <description>Enu TAH Training CoOrdinator Notification Email Template Name</description>
        <label>Training Coordinator Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Training_Coordinator_Renewal_Temp_Name__c</fullName>
        <description>Training Coordinator Renewal Template Name</description>
        <label>Training Coordinator Renewal Temp Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Training_L1_English_Survey_Link__c</fullName>
        <label>Training L1 English Survey Link</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>TrainopsEmails__c</fullName>
        <description>This email is used in sending an email to Training Coordinator to keep this email id as cc address</description>
        <label>TrainopsEmails</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>VF_Email_Template_Name__c</fullName>
        <description>This Visual Force Email Template name is used to set template Id for automatically email triggered upon Enrollment Confirmation</description>
        <label>VF Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>Settings related to Enterprise Training Agreements for Customer Training</description><enableFeeds>false</enableFeeds><label>Training Agreement Settings</label><visibility>Public</visibility></CustomObject>